black mms with convert to gsm alphabet
Change-Id: Idf9d5318c02273655a2c125571f311e993168ccf

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -11,8 +11,8 @@
 
     <style name="TextAppearance.SearchResult">
         <item name="android:textStyle">normal</item>
-        <item name="android:textColor">?android:textColorPrimaryInverse</item>
-        <item name="android:textColorHint">?android:textColorHintInverse</item>
+        <item name="android:textColor">?android:textColorPrimary</item>
+        <item name="android:textColorHint">?android:textColorHint</item>
     </style>
 
     <style name="TextAppearance.SearchResult.Title">
