total removal of smiley parser, smileys images, final look change for message list items
Change-Id: I72a584ef2c414efff7bc316c0af2f0265869912c

--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -36,4 +36,6 @@
     <!-- the background color used for unread conversation -->
     <color name="unread_bgcolor">#ff000000</color>
     <color name="read_bgcolor">#ff222222</color>
+    
+    <drawable name="message_list_item_background">#ff111111</drawable>
 </resources>
