--- a/res/drawable/listitem_background.xml
+++ b/res/drawable/listitem_background.xml
@@ -20,5 +20,5 @@
     <item android:state_pressed="true" android:state_selected="false"
         android:drawable="@android:color/transparent" />
     <item android:state_selected="false"
-          android:drawable="@drawable/message_list_item_background" />
+          android:drawable="@android:color/white" />
 </selector>
